@@ -1,3 +1,10 @@
+2006-12-22  Matthew Allum  <mallum@openedhand.com>
+
+	* psplash-fb.c:
+	* psplash-fb.h:
+	* psplash.c:
+	Add -angle cmd line arg, hopefully fix rotation
+
 2006-12-19  Matthew Allum  <mallum@openedhand.com>
 
 	* psplash-fb.c:
